feat: add  sunbscribe email section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Elegant Furniture | Modern & Affordable Furniture for Your Home"
+    />
     <title>FurniShop</title>
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Elegant Furniture | Modern & Affordable Furniture for Your Home"
+    />
+    <meta
+      property="og:description"
+      content="Discover stunning furniture designs at affordable prices. Perfect for any room in your home!"
+    />
+    <meta property="og:image" content="https://ik.imagekit.io/lumoshiveAcademy/Furniture/8f82d2c087c3c1808660cf2b4c6dc4a5.webp" />
+    <meta property="og:url" content="https://lumos-project-10.vercel.app/" />
+    <meta property="og:site_name" content="Elegant Furniture" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Elegant Furniture | Modern & Affordable Furniture for Your Home"
+    />
+    <meta
+      name="twitter:description"
+      content="Elegant Furniture | Modern & Affordable Furniture for Your Home"
+    />
+    <meta
+      name="twitter:image"
+      content="https://ik.imagekit.io/lumoshiveAcademy/Furniture/8f82d2c087c3c1808660cf2b4c6dc4a5.webp"
+    />
+    <meta name="twitter:site" content="@ElegantFurniture" />
   </head>
   <body>
     <div id="root"></div>
